Show panels. Add UI styles.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,9 +3,9 @@
 }
 /*Initially hide modules DEVELOPMENT ONLY*/
 
-.calcInputs, .manualTrade, #embeddedChart {
-    display: none;
-}
+.calcInputs, .manualTrade, #embeddedChart, .autoRules {
+/*    display: none;
+*/}
 
 #widget-container {
     border: none;
@@ -14,4 +14,7 @@
 .login input.form-control {
     margin-right: 5px;
     width: 260px;
+}
+#header {
+    margin: 0;
 }
