--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/lumen.min.css')
     link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     script(data-main='javascripts/app', src='javascripts/requirejs/require.js')
     script(data-main='javascripts/app', src='https://d33t3vvu2t2yu5.cloudfront.net/tv.js')
   body
