public/stylesheets/main.css

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,7 +10,9 @@
 #widget-container {
     border: none;
 }
-
+#toggleManualBuy, #toggleChart, #toggleRules {
+    cursor: pointer;
+}
 .login input.form-control {
     margin-right: 5px;
     width: 260px;
