--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
   body
     .container
       block header
+      block info
       block chart
       block manualTrade
       block calculator
